Dodany formularz kategorii

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,10 @@ body{
   color: white;
 }
 .topbar div>ul .active>a,.nav .active>a{background-color:#222;background-color: rgba(0, 0, 0, 0.2);}
+
+input{
+  padding: 13px;
+}
 /*
 .masthead {
   background-color: #049cd9;
